--- a/graph/src/App.css
+++ b/graph/src/App.css
@@ -9,7 +9,7 @@ body {
 .App {
   text-align: center;
   width: 100vw;
-  height: 80vh;
+  height: 60vh;
   padding-top: 30px;
 }
 .loading {
@@ -26,4 +26,10 @@ body {
 }
 .controls {
   margin: 5px;
+}
+.title {
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
 }
